# manuscript

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  io.sixpounder.Manuscript.json  io.sixpounder.Manuscript.json~  meson.build  meson_options.txt
.github/workflows/: issues.yaml
.reuse/: dep5
data/: application-manuscript.xml  io.sixpounder.Manuscript.appdata.xml.in  io.sixpounder.Manuscript.appdata.xml.in.in  io.sixpounder.Manuscript.desktop.in.in  io.sixpounder.Manuscript.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  en.po  it.po  manuscript.pot  meson.build
src/: application.rs  config.rs.in  consts.rs  main.rs  manuscript.gresource.xml  meson.build  window.rs  window.ui
src/gtk/: style.css
src/lib/: files.rs
src/libs/: consts.rs  files.rs  mod.rs  text_metrics.rs
src/models/: chunk.rs  document.rs  mod.rs  prelude.rs  settings.rs
src/services/: analyst.rs  document_manager.rs  i18n.rs  mod.rs  prelude.rs  rich_text_serde.rs  settings.rs
src/styles/: style-dark.css  style-sepia.css  style.css
src/widgets/: chunk_row.rs  command_palette.rs  command_palette.ui  editor_view_shell.rs  factories.rs  mod.rs  primary_menu_button.rs  progress.rs  progress_indicator.rs  project_layout.rs  project_layout.ui  project_layout_chunk_container.rs  project_settings.rs  sheet_editor.rs  text_editor.rs  text_editor.ui  theme_switcher.rs  welcome_view.rs  welcome_view.ui
src/widgets/dialogs/: compile.rs  compile_dialog.rs  destroy_confirm_dialog.rs  entry_input_dialog.rs  mod.rs  pdf_panel.rs
src/widgets/dialogs/gtk/: compile_dialog.ui  destroy_confirm_dialog.ui  entry_input_dialog.ui
src/widgets/editors/: buffer.rs  chunk_side_panel.rs  editor_view.rs  mod.rs  prelude.rs  project_settings_editor.rs  sheet_editor.rs  text_editor.rs
src/widgets/editors/gtk/: chunk_side_panel.ui  editor_view.ui  project_settings_editor.ui  sheet_editor.ui  text_editor.ui
src/widgets/gtk/: chunk_row.ui  editor_view_shell.ui  primary_menu_button.ui  progress.ui  progress_indicator.ui  project_layout.ui  project_layout_chunk_container.ui  theme_switcher.ui  welcome_view.ui
