[package]
name = "manuscript"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7.3", package = "gtk4" }
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
bytes = { version = "1.3.0", features = ["serde"] }
sha256 = "1.1.1"
ulid = "1.0.0"
once_cell = "1.17.0"
regex = "1.7.1"
lazy_static = "1.4.0"
pandoc = "0.8.10"
glib-macros = "0.17.6"

[dependencies.adw]
package = "libadwaita"
version  = "0.5.3"
features = ["v1_4"]

[dependencies.glib]
version = "0.18.2"
features = ["log_macros"]
